# opensight-network-rs

./: Cargo.toml  README.md
src/: custom_types.rs  main.rs  misc.rs  netplan.rs  opensight_os_api_lib.rs
src/models/: device.rs  ethernet.rs  host_info.rs  input_models.rs  mod.rs  nameservers.rs  network.rs  route.rs
src/routes/: ethernet.rs  host_info.rs  mod.rs
