[package]
name = "opensight-network-rs"
version = "0.1.0"
edition = "2021"
authos = "Carlos A. Parra F. (tuto193)"

[dependencies]
rocket = "0.5.0"
serde = "1.0.210"
lazy_static = "1.5.0"
serde_yml = "0.0.12"
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"] }
